# oracle-ai-developer-hub

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  DATABASE.md  JET.md  K8S.md  LOCAL.md  MODELS.md  RAG.md  README.md  SERVICES_GUIDE.md  TROUBLESHOOTING.md  architecture.drawio  devjournal.md  oracle-devrel-oci-generative-ai-jet-ui-8a5edab282632443.txt  serverStart.sh  specFile.md
app/: package.json  (+1 more)
apps/agent-reasoning/: .gitignore  .pre-commit-config.yaml  README.md  agent_cli.py  config.yaml.example  example_interceptor.py  generate_reasoning_outputs.py  install.sh  main.py  pyproject.toml  requirements.txt  server.py  split_reasoning.py
apps/agent-reasoning/assets/: tui-arena.tape  tui-chat.tape
apps/agent-reasoning/benchmarks/: BENCHMARK_REPORT.md  README.md  benchmark_embeddings_oci.py  benchmark_embeddings_ollama.py  benchmark_oci.py  benchmark_ollama.py  compare_embeddings.py  compare_results.py  config.json  run_accuracy.py  run_benchmark.py
apps/agent-reasoning/benchmarks/results/qwen_rerun_20260329_044842/: accuracy_20260329_044848.json  accuracy_summary_20260329_044848.tsv  results_incremental.json
apps/agent-reasoning/data/: meaning_of_life_cot.txt  meaning_of_life_decomposed.txt  meaning_of_life_least_to_most.txt  meaning_of_life_react.txt  meaning_of_life_reasoning.txt  meaning_of_life_recursive.txt  meaning_of_life_reflection.txt  meaning_of_life_standard.txt  meaning_of_life_tot.txt
apps/agent-reasoning/datalake/: __init__.py  cli.py  config.py  dashboard.py  docker-compose.yml  models.py  schema.sql  store.py
apps/agent-reasoning/datalake/templates/: base.html  dashboard.html  sessions.html  trace_detail.html
apps/agent-reasoning/docs/: agent-reasoning-visual.html
apps/agent-reasoning/interactive/: package-lock.json  package.json
apps/agent-reasoning/notebooks/: agent_reasoning_demo.ipynb
apps/agent-reasoning/src/: __init__.py  client.py  interceptor.py  refinement_loop.py
apps/agent-reasoning/src/agent_reasoning/: __init__.py  agent_metadata.py  cache.py  chain.py  circuits.py  client.py  ensemble.py  interceptor.py  recommender.py
apps/agent-reasoning/src/agent_reasoning/agents/: __init__.py  analogical.py  base.py  complex_refinement.py  consistency.py  cot.py  debate.py  decomposed.py  least_to_most.py  mcts.py  meta.py  react.py  recursive.py  refinement_loop.py  self_reflection.py  socratic.py  standard.py  tot.py
apps/agent-reasoning/src/agent_reasoning/visualization/: __init__.py  analogy_viz.py  debate_viz.py  diff_viz.py  models.py  socratic_viz.py
apps/agent-reasoning/src/agents/: analogical.py  complex_refinement.py  refinement_loop.py  socratic.py
apps/agent-reasoning/src/benchmarks/: __init__.py  accuracy.py  charts.py  runner.py
apps/agent-reasoning/src/visualization/: __init__.py  base.py  diff_viz.py  models.py  pipeline_viz.py
apps/agent-reasoning/tests/: test_agent_metadata.py  test_analogical.py  test_cache.py  test_chain.py  test_circuits.py  test_client.py  test_consistency.py  test_cot.py  test_debate.py  test_debug_protocol.py  test_decomposed.py  test_edge_cases.py  test_ensemble.py  test_hyperparams.py  test_interceptor.py  test_least_to_most.py  test_mcts.py  test_meta.py  test_react.py  test_recommender.py  test_recursive.py  test_refinement_loop.py  test_self_reflection.py  test_socratic.py  test_standard.py  test_structured_endpoint.py  test_token_budget.py  test_tot.py  test_visualizers.py
apps/agent-reasoning/tui/: README.md  go.mod  go.sum  main.go
apps/agent-reasoning/tui/internal/app/: app.go  context.go  router.go  router_test.go
apps/agent-reasoning/tui/internal/client/: ollama.go  server.go  server_test.go
apps/agent-reasoning/tui/internal/config/: config.go  config_test.go
apps/agent-reasoning/tui/internal/server/: manager.go
apps/agent-reasoning/tui/internal/session/: store.go  store_test.go
apps/agent-reasoning/tui/internal/ui/: ansi.go  arena.go  chat.go  diffview.go  diffview_test.go  header.go  hyperparams.go  input.go  metrics.go  metrics_test.go  modelselector.go  progress.go  progress_test.go  sidebar.go  sparkline.go  sparkline_test.go  splash.go  styles.go  swimlane.go  swimlane_test.go  treegraph.go  treegraph_test.go
apps/agent-reasoning/tui/internal/views/: agentinfo.go  arena.go  benchmark.go  chat.go  debug.go  duel.go  sessions.go
apps/agent-reasoning/verification/: verify_consistency.py  verify_react.py  verify_recursive.py  verify_reflexion.py  verify_tot.py
(+1084 files in other folders)
