[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-reasoning"
version = "1.0.8"
description = "Transform LLMs into robust problem-solving agents with advanced reasoning strategies"
readme = "README.md"
license = "MIT"
authors = [
    {name = "jasperan", email = "jasperan@users.noreply.github.com"},
]
maintainers = [
    {name = "jasperan", email = "jasperan@users.noreply.github.com"},
]
keywords = [
    "llm", "reasoning", "agents", "ollama", "cognitive-architecture",
    "chain-of-thought", "cot", "tree-of-thoughts", "tot",
    "react", "self-reflection", "self-consistency",
    "decomposed-prompting", "least-to-most", "recursive-lm",
    "refinement-loop", "complex-refinement", "pipeline",
    "prompt-engineering", "ai-reasoning", "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
[project.urls]
Homepage = "https://github.com/jasperan/agent-reasoning"
Repository = "https://github.com/jasperan/agent-reasoning"
Issues = "https://github.com/jasperan/agent-reasoning/issues"

requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "termcolor>=2.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "pydantic>=2.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
agent-reasoning = "agent_reasoning.cli:main"
agent-reasoning-server = "agent_reasoning.server:main"

[tool.setuptools.packages.find]
where = ["src"]
